# gen-ai-apps

./: README.md  pyproject.toml
src/apps/content_search/: agent.py  config.py  config.yaml  llm.py  main.py  splitdocuments.py
src/apps/content_search/vectorstores/chroma/: chroma.sqlite3
