[tool.poetry]
name = "gen-ai-apps"
version = "0.1.0"
description = "Building generative AI applications with large langauge models"
authors = ["asuzukosi <keloasuzu@yahoo.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
rich = "^13.6.0"
openai = "^0.28.1"
chromadb = "^0.4.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
